Arregldos distintos problemas con los mappers, entidades, relaciones e import.sql ahora la base de datos se carga directamente al iniciar la aplicacion en create-drop sin generear errores. Se prueba el end-point @GetMapping para obtener un Accomodation según su id y se deja funcionando correctamente